# incplot-lib

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml  publish.yml
demos/: CMakeLists.txt
demos/data/: DEFRSPIT_Eco.tsv  elcars_data.csv  flights_data.ndjson  iris_data.ndjson  iris_data_small.ndjson  nile_data.csv  wine_quality_data.ndjson  wine_quality_data_small.csv
demos/scratchpad/: scratchpad.cpp
demos/scratchpad_dbg/: scratchpad_dbg.cpp
include/: incplot-lib.hpp  incplot.hpp
include/L2/: incplot.hpp
include/L2/incplot/: _common.hpp  args.hpp  color.hpp  config.hpp  cross_platform.hpp  datastore.hpp  desired_plot.hpp  err.hpp  misc.hpp  parsers_inc.hpp  plot_structures.hpp
include/incplot/: args.hpp  braille_drawer.hpp  color_mixer.hpp  config.hpp  cross_platform.hpp  datastore.hpp  desired_plot.hpp  detail.hpp  parser.hpp  parser_inc.hpp  parsers_inc.hpp  plot_structures.hpp
include/incplot-lib/: config.hpp  datastore.hpp  desired_plot.hpp  err.hpp  parsers_inc.hpp  plot_structures.hpp
include/incplot/detail/: color.hpp  concepts.hpp  misc.hpp
src/: PD.cpp  args.cpp  color_mixer.cpp  cross_platform.cpp  datastore.cpp  desired_plot.cpp  desired_plot_impl.cpp  err.cpp  incplot.cpp  machinery_hash_memory_shim.cpp  parser_inc.cpp  plot_structures_eval.cpp
src/private_inc/: plot_structures_impl.hpp
src/private_inc/incplot-lib_private/: braille_drawer.hpp  color_mixer.hpp  detail.hpp  plot_structures_impl.hpp
src/private_inc/private/: braille_drawer.hpp  color_mixer.hpp  concepts.hpp  detail.hpp  fontmaker.hpp  plot_structures_impl.hpp
test/: CMakeLists.txt
test/data/csv/: flights_data.csv
test/data/flights/: flights_data.csv  flights_data.json  flights_data.ndjson  flights_data.tsv
test/data/json/: penguins_data.json  wine_quality_data.json
test/data/ndjson/: flights_data.ndjson  nile_data.ndjson  penguins_data.ndjson  wine_quality_data.ndjson
test/data/nile/: nile_data.csv  nile_data.json  nile_data.ndjson  nile_data.tsv
test/data/penguins/: penguins_data.csv  penguins_data.json  penguins_data.ndjson
test/data/tsv/: penguins_data.tsv
test/data/wine_quality/: wine_quality_data.json  wine_quality_data.ndjson  wine_quality_data.tsv
test/inc/: data_get.hpp  kcomb.hpp  tests.hpp  tests_config.hpp
test/src/: dp_guess_test.cpp  parser_test.cpp  ps_barh_test.cpp  ps_barv_test.cpp  ps_multiline_test.cpp  ps_scatter_test.cpp  ps_test.cpp  tests.cpp  unit_tests.cpp
tools/: CMakeLists.txt
